reference-llvm/tests/should-fail/fail20.mu
// other unimplemented func

function @entry foo() {
    bar();
}
